# crysfml

./: pyproject.toml  setup.py
.github/workflows/: build_variants.yml
Python_API/Examples/: lowlevelapi_powdergeneration.py
Python_API/Src/: API_Atom_TypeDef.py
Python_API/Tests/: test_crystal_metrics.py  test_symmetry_groups.py
Scripts/: buildscript.sh
